@@ -15,6 +15,9 @@ jsoup changelog
    document.
    <https://github.com/jhy/jsoup/issues/552>
 
+ * Fixed an issue where a table nested within a TH cell would parse to an incorrect tree.
+   <https://github.com/jhy/jsoup/issues/575>
+
 *** Release 1.8.2 [2015-Apr-13]
  * Performance improvements for parsing HTML on Android, of 1.5x to 1.9x, with larger parses getting a bigger
    speed increase. For non-Android JREs, around 1.1x to 1.2x.
